spacing fixed

--- a/src/app/Emulations/_emulations.scss
+++ b/src/app/Emulations/_emulations.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     padding: 0rem;
     .addCopyTraderWrapperContainer {
-      width: 35rem !important;
+      width: 33rem !important;
       .addWalletWrapper {
         margin-top: 0rem;
       }
